--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0-alpha04'
         //noinspection DifferentKotlinGradleVersion
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.20"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21"
     }
 }
 
@@ -44,7 +44,7 @@ dependencies {
     implementation 'com.github.blocoio:faker:1.0.1'
 
     implementation 'com.android.support:support-annotations:28.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.20"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.21"
 
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:design:28.0.0'
@@ -57,6 +57,12 @@ dependencies {
 
     // Required for instrumented tests
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+
+    androidTestImplementation('com.schibsted.spain:barista:2.7.1') {
+        exclude group: 'com.android.support'
+        exclude group: 'org.jetbrains.kotlin' // Only if you already use Kotlin in your project
+    }
+
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
