--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-alpha07'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha02'
         //noinspection DifferentKotlinGradleVersion
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.40'
     }
 }
 
@@ -81,13 +81,13 @@ testProperties.load(new FileInputStream(testPropertiesFile))
 testProperties.putAll(gradle.getStartParameter().getProjectProperties())
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     buildToolsVersion "28.0.3"
 
     useLibrary 'org.apache.http.legacy'
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
     }
 
     defaultConfig {
@@ -95,7 +95,7 @@ android {
         versionName "1.4.6.1"
 
         minSdkVersion 14
-        targetSdkVersion 28
+        targetSdkVersion 29
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -124,6 +124,7 @@ android {
         debug {
             buildConfigField("String", "TEST_USER_ID", "\"${testProperties.testUserId}\"")
             buildConfigField("String", "TEST_USER_KEY_READONLY", "\"${testProperties.testUserKeyReadonly}\"")
+            buildConfigField("String", "FLAVOR", "\"\"")
         }
     }
 
